Updates to index.html.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>:: HOME :: Get all the required information here</title>        
+<title>Digital Marketing - An Introduction</title>        
 <meta charset = "UTF-8">
 <meta name="description" content="Get information here">
 <meta name="keywords" content="HTML,CSS,XML,JavaScript">
