Updates to index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Digital Marketing - An Introduction</title>        
+<title></title>        
 <meta charset = "UTF-8">
-<meta name="description" content="Get information here">
-<meta name="keywords" content="HTML,CSS,XML,JavaScript">
+<meta name="description" content="Get tons of information about Digital Marketing and related fields here">
+<meta name="keywords" content="Blogging, Search Engine Optimization (SEO), Digital Marketing, Search Engine Marketing (SEM)">
 <meta name="author" content="RS">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- <link rel = "stylesheet" href = "stylefile.css"> -->
