--- a/index.html
+++ b/index.html
@@ -7,12 +7,33 @@
 <meta name="keywords" content="Blogging, Search Engine Optimization (SEO), Digital Marketing, Search Engine Marketing (SEM)">
 <meta name="author" content="RS">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- <link rel = "stylesheet" href = "stylefile.css"> -->
+<link rel = "stylesheet" href = "css/style.css">
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
+<!--Fav icon-->
+
+<link rel="icon" type="image/png" href="img/icon.png">
 </head>
 <body>
+<header><div class="logo">MARVEL</div></header>
 
+<nav> 
+    <ul> 
+    <li><a class="active" href = "https://www.tutorialspoint.com/html">HOME</a></li> 
+    <li><a href = "https://www.tutorialspoint.com/html">AVENGERS</a></li> 
+    <li><a href = "https://www.tutorialspoint.com/css">THE GUARDIANS OF GALAXY</a></li> 
+    </ul> 
+</nav> 
+<br><br><Br>
 
-
+<footer>
+    <a href="https://www.color-hex.com/color-palette/69287">Nav color</a>
+    <a href="https://www.color-hex.com/color-palette/69469">No use yet</a>
+</footer>
 
 </body>
 <!-- <script src = "scriptfile.js"></script> -->
