--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <![endif]-->
 <!--Fav icon-->
 
-<link rel="icon" type="image/png" href="img/icon.png">
+<link rel="icon" type="image/ico" href="img/favicon.ico">
 </head>
 <body>
 <header><div class="logo">MARVEL</div></header>
