Further more edits to .html and .scss files.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,22 @@
 <nav> 
     <ul> 
     <li><a class="active" href = "https://www.tutorialspoint.com/html">HOME</a></li> 
-    <li><a href = "https://www.tutorialspoint.com/html">AVENGERS</a></li> 
+    <li class="dropdown"><a href = "#" class="dropbtn">DM</a></li> 
+    <div class="dropdown-content">
+        <a href="#">SEO</a>
+        <a href="#">SEM</a>
+      </div>
     <li><a href = "https://www.tutorialspoint.com/css">THE GUARDIANS OF GALAXY</a></li> 
     </ul> 
 </nav> 
-<br><br><Br>
+
+<div class="ad1">hi1</div>
+
+<article> 
+    Article number 1
+    </article> 
+
+    <div class="ad2">hi2</div>
 
 <footer>
     <a href="https://www.color-hex.com/color-palette/69287">Nav color</a>
