--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <footer>
     <a href="https://www.color-hex.com/color-palette/69287">Nav color</a>
     <a href="https://www.color-hex.com/color-palette/69469">No use yet</a>
+    <a href="https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar">Nav ref</a>
+
 </footer>
 
 </body>
