Adjusting logo into navbar.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
 <link rel="icon" type="image/ico" href="img/favicon.ico">
 </head>
 <body>
-<header><div class="logo">MARVEL</div></header>
+<!-- <header></header> -->
 
 <nav> 
+        <div style="float:left" class="logo"><a  href="#">SOME LOGO TEXT</a></div>
     <ul> 
-    <li><a class="active" href = "https://www.tutorialspoint.com/html">HOME</a></li> 
-    <li class="dropdown"><a href = "#" class="dropbtn">DM</a></li> 
+    
+    <li><a class="active" href="#">HOME</a></li> 
+    <!-- <li class="dropdown"><a href = "#" class="dropbtn">DM</a></li> 
     <div class="dropdown-content">
         <a href="#">SEO</a>
         <a href="#">SEM</a>
-      </div>
-    <li><a href = "https://www.tutorialspoint.com/css">THE GUARDIANS OF GALAXY</a></li> 
+      </div> -->
+      <li><a href="#">DM</a></li> 
+    <li><a href="#">THE GUARDIANS OF GALAXY</a></li> 
     </ul> 
 </nav> 
 
