--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 <body>
 <!-- <header></header> -->
 
+
+<div id="nav-bar">
+<a id="logo" href="#">SOME LOGO TEXT</a>
+
 <nav> 
-        <div style="float:left" class="logo"><a  href="#">SOME LOGO TEXT</a></div>
     <ul> 
     
     <li><a class="active" href="#">HOME</a></li> 
@@ -34,8 +37,9 @@
       <li><a href="#">DM</a></li> 
     <li><a href="#">THE GUARDIANS OF GALAXY</a></li> 
     </ul> 
-</nav> 
-
+</nav>
+<div class="clear"></div> 
+</div>
 <div class="ad1">hi1</div>
 
 <article> 
