--- a/index.html
+++ b/index.html
@@ -21,25 +21,22 @@
 <body>
 <!-- <header></header> -->
 
-
-
-
-
 <nav> 
-        <a id="logo" href="#">SOME LOGO TEXT</a>
+
+    <a id="logo" href="#">SOME LOGO TEXT</a>
     <ul> 
-    
     <li><a class="active" href="#">HOME</a></li> 
     <!-- <li class="dropdown"><a href = "#" class="dropbtn">DM</a></li> 
     <div class="dropdown-content">
         <a href="#">SEO</a>
         <a href="#">SEM</a>
       </div>-->
-      <li><a href="#">DM</a></li> 
-    <li><a href="#">THE GUARDIANS OF GALAXY</a></li> 
+      <li><a href="#">ITEM 2</a></li> 
+    <li><a href="#">ITEM 3</a></li> 
+    <li><a href="#">ITEM 3</a></li> 
     </ul> 
 </nav> 
-
+<div class="main-body">
 <div class="ad1">hi1</div>
 
 <article> 
@@ -47,6 +44,7 @@
     </article> 
 
     <div class="ad2">hi2</div>
+</div>
 
 <footer>
     <a href="https://www.color-hex.com/color-palette/69287">Nav color</a>
