Color Scheme changed.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <a href="https://www.color-hex.com/color-palette/69287">Nav color</a>
     <a href="https://www.color-hex.com/color-palette/69469">No use yet</a>
     <a href="https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar">Nav ref</a>
+    <a href="https://www.classycareergirl.com/">Reference Site</a>
 
 </footer>
 
