Style2.scss created

--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
     <li><a href="#">ITEM 3</a></li> 
     <li><a href="#">ITEM 3</a></li> 
     </ul> 
-    <button id="ctheme">Change Theme</button>
+    
 </nav> 
+
+<ul class="breadcrumb">
+    <li><a href="#">Home</a></li>
+    <li>Main</li>
+  </ul>
+  <img src="img/aurora.jpg" id="aurora">
+  <button id="ctheme">Change Theme</button>
+
 <div class="main-body">
-        <ul class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li>Main</li>
-              </ul>
 <div class="ad1">hi1</div>
 
 <article> 
