--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <meta name="author" content="RS">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel = "stylesheet" href = "css/style.css" id="theme_css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -42,8 +44,21 @@
     <li><a href="#">Home</a></li>
     <li>Main</li>
   </ul>
-  <img src="img/aurora.jpg" id="aurora">
-  <button id="ctheme">Change Theme</button>
+
+  <div class="container_ab">
+  <img src="img/aurora.jpg" id="aurora" alt="Aurora Borealis">
+  <div class="dets_ab">Aurora Borealis</div>
+</div>
+
+ <div class="container_aa">
+  <img src="img/aurora2.jpg" id="aurora2" alt="Aurora Australis">
+  <div class="dets_aa">Aurora Australis</div>
+  
+</div>
+
+<div id="ctheme">
+    <i class="fa fa-paint-brush" aria-hidden="true"></i>
+</div>
 
 <div class="main-body">
 <div class="ad1">hi1</div>
