--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>        
+<title>Home Page</title>        
 <meta charset = "UTF-8">
 <meta name="description" content="Get tons of information about Digital Marketing and related fields here">
 <meta name="keywords" content="Blogging, Search Engine Optimization (SEO), Digital Marketing, Search Engine Marketing (SEM)">
@@ -41,17 +41,18 @@
 </nav> 
 
 <div class="container_ab">
-  <img src="img/aurora.jpg" id="aurora" alt="Aurora Borealis">
+  <img src="img/aurora.jpg" id="aurora" alt="Aurora Borealis" title="Aurora Borealis">
   <div class="dets_ab">Aurora Borealis</div>
 </div>
 
  <div class="container_aa">
-  <img src="img/aurora2.jpg" id="aurora2" alt="Aurora Australis">
-  <div class="dets_aa">Aurora Australis</div>
+  <img src="img/aurora2.jpg" id="aurora2" alt="Aurora Australis" title="Aurora Australis">
+  <div class="dets_aa">Aurora Australis<hr></div>
+  
   
 </div>
 
-<div id="ctheme">
+<div id="ctheme" title="Change the theme.">
     <i class="fa fa-paint-brush" aria-hidden="true"></i>
 </div>
 
@@ -61,7 +62,7 @@
   </ul>
 
 <div class="main-body">
-<div class="ad1">hi1</div>
+<div class="ad1">Nibh tellus molestie nunc non blandit massa enim nec. Velit aliquet sagittis id consectetur. Turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet. Sit amet nisl purus in. Vivamus arcu felis bibendum ut tristique. Nisl pretium fusce id velit ut tortor. Pulvinar etiam non quam lacus. Ut pharetra sit amet aliquam. Tristique et egestas quis ipsum suspendisse ultrices gravida. Semper auctor neque vitae tempus quam pellentesque nec nam.</div>
 
 <article> 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet est placerat in egestas erat. Viverra orci sagittis eu volutpat odio facilisis mauris sit amet. Mi quis hendrerit dolor magna eget est. A iaculis at erat pellentesque. Et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Integer eget aliquet nibh praesent. Dui vivamus arcu felis bibendum ut tristique et. Blandit massa enim nec dui nunc mattis enim ut. Id semper risus in hendrerit gravida rutrum. Habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat.</p>
@@ -73,7 +74,7 @@
     <p>Amet mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu. Aliquet porttitor lacus luctus accumsan tortor. Amet consectetur adipiscing elit duis. Est ante in nibh mauris cursus mattis molestie a. Nunc sed velit dignissim sodales ut eu sem integer vitae. Habitant morbi tristique senectus et netus et malesuada fames. Felis bibendum ut tristique et egestas quis ipsum suspendisse ultrices. Sed elementum tempus egestas sed sed risus pretium quam. Senectus et netus et malesuada fames ac turpis egestas. Volutpat commodo sed egestas egestas. Sem nulla pharetra diam sit amet nisl. Sed faucibus turpis in eu mi bibendum. Natoque penatibus et magnis dis. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio.</p>
     </article> 
 
-    <div class="ad2">hi2</div>
+    <div class="ad2">Nibh tellus molestie nunc non blandit massa enim nec. Velit aliquet sagittis id consectetur. Turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet. Sit amet nisl purus in. Vivamus arcu felis bibendum ut tristique. Nisl pretium fusce id velit ut tortor. Pulvinar etiam non quam lacus. Ut pharetra sit amet aliquam. Tristique et egestas quis ipsum suspendisse ultrices gravida. Semper auctor neque vitae tempus quam pellentesque nec nam.</div>
 </div>
 
 <footer>
