Changed the fontawesome.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <meta name="author" content="RS">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel = "stylesheet" href = "css/style.css" id="theme_css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -53,7 +54,9 @@
 </div>
 
 <div id="ctheme" title="Change the theme.">
-    <i class="fa fa-paint-brush" aria-hidden="true"></i>
+    <!-- <i class="fa fa-paint-brush" aria-hidden="true"></i> -->
+    <i class="far fa-sun" id="sun"></i>
+    <i class="fas fa-moon" id="moon"></i>
 </div>
 
 <ul class="breadcrumb">
